Search by ingredient bug fix
The function that lets users search for recipes by ingredients now works.

Some divs in the recipePreview page will now allow the user to scroll if overflowing

--- a/client/src/styles/pageSpecific/recipePreview.scss
+++ b/client/src/styles/pageSpecific/recipePreview.scss
@@ -32,12 +32,21 @@
       grid-area: description;
       width: 100%;
       height: 100%;
+      padding-right: 0.3rem;
+      overflow-y: scroll;
    }
 
    .ingredients {
       grid-area: ingredients;
       width: 100%;
       height: 100%;
+      display: flex;
+      flex-direction: column;
+
+      ul {
+         padding-right: 0.3rem;
+         overflow-y: scroll;
+      }
    }
 
    .nutrientInformation {
@@ -48,5 +57,27 @@
 
    .bottomButtons {
       grid-area: bottomButtons;
+   }
+
+   // scrollbar styles
+   ::-webkit-scrollbar {
+      width: 0.15rem;
+   }
+
+   ::-webkit-scrollbar-thumb {
+      background-color: var(--text-color-main);
+      border-radius: 0.3rem;
+   }
+
+   ::-webkit-scrollbar-thumb:hover {
+      background-color: var(--text-color-main);
+   }
+
+   ::-webkit-scrollbar-thumb:active {
+      background-color: var(--text-color-main);
+   }
+   ::-webkit-scrollbar-track {
+      // fake margin
+      border-left: 0.3rem solid transparent;
    }
 }
